--- a/playbooks/turntable.yml
+++ b/playbooks/turntable.yml
@@ -14,3 +14,8 @@
       name: /home/pi/lias-turntable
       editable: yes
 
+  - name: Install pi-rc522
+    pip:
+      virtualenv: /home/pi/venv
+      name: git+https://github.com/ondryaso/pi-rc522.git#egg=pi-rc522
+      editable: yes
