Removed spurious dependencies and switched to pi-rf522 fork

--- a/playbooks/turntable.yml
+++ b/playbooks/turntable.yml
@@ -17,5 +17,5 @@
   - name: Install pi-rc522
     pip:
       virtualenv: /home/pi/venv
-      name: git+https://github.com/ondryaso/pi-rc522.git#egg=pi-rc522
+      name: git+https://github.com/sebaacuna/pi-rc522.git#egg=pi-rc522
       editable: yes
