--- a/ansible/turntable.yml
+++ b/ansible/turntable.yml
@@ -1,44 +1,21 @@
 ---
-- hosts: raspberrypi.local
+- hosts: berry
   remote_user: pi
   become: yes
 
   roles:
-  # - rpi_mini
   - mpd_rpi
-
-  tasks:
-  - name: Add MPD alernate repo
-    apt_repository:
-      repo: deb http://www.lesbonscomptes.com/upmpdcli/downloads/mpd-debian/ stretch main
-      state: present
-
-  - name: Update
-    apt:
-      update_cache: yes
-
-  - name: Install rsync
-    apt:
-      name: rsync
-
-  - name: Install jq
-    apt:
-      name: jq
-
-  - name: Install vim
-    apt:
-      name: vim
-
-  - name: Install MPD
-    apt:
-      name: mpd
-      force: yes
 
 
 - hosts: berry
   remote_user: pi
 
   tasks:
+  - name: Checkout source
+    git:
+      repo: git@github.com:sebaacuna/lias-turntable
+      dest: /home/pi/lias-turntable
+
   - name: Install requirements
     pip:
       virtualenv: /home/pi/venv
