--- a/ansible/py3.yml
+++ b/ansible/py3.yml
@@ -60,6 +60,10 @@
     apt:
       name: zlib1g-dev
 
+  - name: Install git
+    apt:
+      name: git
+
   - name: Download Python3.5
     get_url:
       url: https://www.python.org/ftp/python/3.5.2/Python-3.5.2.tgz
@@ -93,3 +97,4 @@
   - name: Install PIP3
     apt:
       name: python3-pip
+
